# trade-trend-kit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: x.example.json  x.json
docs/: DETAILED_DESIGN.md
src/trade_trend_kit/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  main.py  scheduler.py
src/trade_trend_kit/app/: __init__.py  fetch_job.py  incremental.py  report_job.py  services.py
src/trade_trend_kit/domain/: __init__.py  errors.py  models.py  ports.py
src/trade_trend_kit/infra/fake/: __init__.py  analyzer.py  x_client.py
src/trade_trend_kit/infra/llm/: error_archive.py  openai_compatible.py  prompts.py
src/trade_trend_kit/infra/publishing/: __init__.py  noop_publisher.py  payloads.py
src/trade_trend_kit/infra/storage/: json_report_store.py  json_state_store.py  json_tweet_store.py
src/trade_trend_kit/infra/x/: __init__.py  normalizer.py  twikit_client.py
src/trade_trend_kit/utils/: env.py  filenames.py  json_io.py  report_rendering.py  time.py
tests/: test_cli.py  test_config.py  test_domain_models.py  test_fake_pipeline.py  test_incremental.py  test_logging_config.py  test_openai_compatible_analyzer.py  test_publishing.py  test_report_rendering.py  test_scheduler.py  test_storage.py  test_tweet_normalizer.py  test_twikit_client.py
